# Pointnet2_PyTorch

./: CMakeLists.txt  pyproject.toml
pointnet2_ops/: CMakeLists.txt  pointnet2_utils.py
pointnet2_ops/_ext-src/: CMakeLists.txt
pointnet2_ops/_ext-src/include/: ball_query.h  group_points.h  sampling.h
pointnet2_ops/_ext-src/src/: ball_query.cpp  group_points.cpp  sampling.cpp
